@@ -1,7 +1,17 @@
+2010-02-17  Christoph Junghans (ottxor)
+
+	* configure.in plot.c: New configuration option to add local packager to
+	list of contacts for bug reporting.
+	Bug #2951583
+
 2010-02-17  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/term.c (do_arc):  Avoid calling trunc() because some compilers
 	are still back in the dark ages (pre C99).
+
+	* configure.in: Change default installation directory for x11 resources
+	to /etc/X11/app-defaults.
+	Bug #1953742
 
 2010-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>
 
